welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:58: error: not found: value color
faire2casesA(color.red)
             ^PatternPicture:60: error: not found: value color
faire2casesB(color.blue)
             ^PatternPicture:63: error: not found: value color
faire2casesB(color.yellow)
             ^PatternPicture:65: error: not found: value color
faire2casesA(color.green)
             ^